# sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  justfile
.agents/skills/: adopt-upstream.md
.claude/commands/: ship.md
.claude/skills/: ship.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml  release.yml  sync-openapi.yml
cookbook/: README.md
cookbook/python/: README.md  pyproject.toml
cookbook/python/src/: main.py  weather_tools.py
cookbook/rust/: Cargo.toml  PLAN.md  README.md
cookbook/rust/agent-sessions/: Cargo.toml  README.md
cookbook/rust/agent-sessions/src/: main.rs
cookbook/rust/common/: Cargo.toml
cookbook/rust/common/src/: lib.rs
cookbook/rust/dad-jokes/: Cargo.toml  README.md
cookbook/rust/dad-jokes/src/: main.rs
cookbook/rust/error-handling/: Cargo.toml  README.md
cookbook/rust/error-handling/src/: main.rs
cookbook/rust/file-operations/: Cargo.toml  README.md
cookbook/rust/file-operations/src/: main.rs
cookbook/rust/image-attachments/: Cargo.toml  README.md
cookbook/rust/image-attachments/src/: main.rs
cookbook/rust/src/: main.rs  weather_tools.rs
cookbook/rust/streaming-events/: Cargo.toml  README.md
cookbook/rust/streaming-events/src/: main.rs
cookbook/typescript/: README.md  package-lock.json  package.json  tsconfig.json
cookbook/typescript/src/: main.ts  weather_tools.ts
docs/: getting-started.md
openapi/: openapi.json
python/: README.md  pyproject.toml
python/everruns_sdk/: __init__.py  auth.py  client.py  errors.py  models.py  sse.py
python/everruns_sdk/_generated/: models.py
python/examples/: basic.py  initial_files.py  memories.py  workspaces.py
python/tests/: test_client.py  test_sse.py  test_sse_reconnect.py
rust/: Cargo.toml  README.md
rust/examples/: basic.rs  initial_files.rs  memories.rs  workspaces.rs
rust/src/: auth.rs  client.rs  error.rs  lib.rs  models.rs  sse.rs
rust/tests/: client_test.rs  serialization_test.rs  sse_reconnect_test.rs  sse_test.rs
scripts/: init-cloud-env.sh  test-git-identity.sh
scripts/lib/: common.sh  pre-push.sh
specs/: api-surface.md  architecture.md  auth.md  cookbooks.md  error-handling.md  maintenance.md  release-process.md  sdk-features.md  shipping.md  sse-streaming.md  upstream-adoption.md
typescript/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
typescript/examples/: basic.ts  initial-files.ts  memories.ts  workspaces.ts
typescript/src/: auth.ts  client.ts  errors.ts  index.ts  models.ts  sse.ts
typescript/tests/: client.test.ts  sse-reconnect.test.ts  sse.test.ts
