[package]
name = "everruns-sdk"
version = "0.1.2"
edition = "2024"
description = "Rust SDK for Everruns API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/everruns/sdk"
documentation = "https://docs.rs/everruns-sdk"
keywords = ["everruns", "sdk", "api", "ai", "agents"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
secrecy = { version = "0.10", features = ["serde"] }
getrandom = "0.2"
futures = "0.3"
async-stream = "0.3"
tracing = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
tokio-test = "0.4"
wiremock = "0.6"
