[package]
name = "cookbook"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "dad-jokes"
path = "src/main.rs"

[[bin]]
name = "weather-tools"
path = "src/weather_tools.rs"

[dependencies]
everruns-sdk = { path = "../../rust" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "1"
